--- a/FormEditor/FormEditor/FormEditor.csproj
+++ b/FormEditor/FormEditor/FormEditor.csproj
@@ -133,6 +133,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\FeldsType.cs" />
     <Compile Include="Models\FormRepository.cs" />
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -209,7 +210,6 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\Js\main.js" />
-    <Content Include="Scripts\main.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
