--- a/FormEditorWebAPI/FormEditorApi/FormEditorApi/FormEditor.Api.csproj
+++ b/FormEditorWebAPI/FormEditorApi/FormEditorApi/FormEditor.Api.csproj
@@ -109,18 +109,6 @@
   <ItemGroup>
     <Content Include="CreateAuditInfoTable.sql" />
     <Content Include="Global.asax" />
-    <Content Include="SqlServerTypes\x64\msvcr120.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SqlServerTypes\x64\SqlServerSpatial140.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SqlServerTypes\x86\msvcr120.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -128,10 +116,6 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\FormsController.cs" />
-    <Compile Include="Models\AuditInfo.cs" />
-    <Compile Include="Models\Block.cs" />
-    <Compile Include="Models\FieldType.cs" />
-    <Compile Include="Models\Form.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebApiApplication.asax.cs" />
   </ItemGroup>
@@ -152,6 +136,12 @@
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\FormEditor\Repository\FormEditor.Model.csproj">
+      <Project>{9db8c4c4-b9f1-44d5-b269-ed79a68250c6}</Project>
+      <Name>FormEditor.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
