--- a/FormEditor/FormEditor.Api/FormEditor.Api.csproj
+++ b/FormEditor/FormEditor.Api/FormEditor.Api.csproj
@@ -82,10 +82,8 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\FormsController.cs" />
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApiApplication.asax.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
