--- a/FormEditor/FormEditor.Api/Web.config
+++ b/FormEditor/FormEditor.Api/Web.config
@@ -4,7 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="owin:AutomaticAppStartup" value="false" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -28,16 +30,35 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+    
     </assemblyBinding>
   </runtime>
   <connectionStrings>
     <add name="FormContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=FormEditorDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <clear/>
+        <add name="Access-Control-Allow-Origin" value="*"/>
+        <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
+        <add name="Access-Control-Allow-Methods" value="*"/>
+      </customHeaders>
+    </httpProtocol>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+    <modules runAllManagedModulesForAllRequests="true"></modules>
+  </system.webServer>
+</configuration>
