--- a/FormEditor/FormEditor.Api/Web.config
+++ b/FormEditor/FormEditor.Api/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
@@ -11,7 +15,6 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
-  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -38,7 +41,6 @@
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
-    
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
@@ -58,9 +60,9 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="FormContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=FormEditorDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="FormContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=FormEditorDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-<system.webServer>
+  <system.webServer>
     <httpProtocol>
       <customHeaders>
         <clear />
@@ -77,4 +79,10 @@
     </handlers>
     <modules runAllManagedModulesForAllRequests="true"></modules>
   </system.webServer>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
