--- a/FormEditor/FormEditor.Api/packages.config
+++ b/FormEditor/FormEditor.Api/packages.config
@@ -1,14 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ChoETL" version="1.1.0.1" targetFramework="net461" />
+  <package id="ChoETL.JSON" version="1.1.0.1" targetFramework="net461" />
+  <package id="Cinchoo" version="1.1.1.9" targetFramework="net461" />
+  <package id="CsvHelper" version="12.1.2" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Cors" version="4.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net461" developmentDependency="true" />
+  <package id="System.CodeDom" version="4.4.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.4.3" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
